--- a/hbd/index.html
+++ b/hbd/index.html
@@ -36,25 +36,25 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">N</h2>
+    	<h2 style="color:#F2B300;">B</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">N</h2>
+    	<h2 style="color:#0719D4;">H</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">A</h2>
+    	<h2 style="color:#D14D39;">I</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">V</h2>
+    	<h2 style="color:#8FAD00;">D</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">Y</h2>
+    	<h2 style="color:#8377E4;">I</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">A</h2>
+    	<h2 style="color:#99C96A;">I</h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">A</h2>
+    	<h2 style="color:#20CFB4;">I</h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
@@ -124,13 +124,19 @@
 				<p>as a small birthday present to you &#127873</p>
 				<p>thanks for being there</p>
 				<p>thanks for the friendship we made &#128525</p>
-				<p>Thanks for all your dramas &#128518...</p>
-				<p>Thanks for all your nautankis &#128513...</p>
-				<p>Thanks for all those pubg matches</p>
 				<p>Thanks for listning to my all bakwas baaten &#128517</p>
+				<p>Thanks for tollarating all my faltu pickup lines &#128518...</p>
+				<p>but fir v nai pati tuu .. &#58385 &#58385</p>
+				<p>Thanks for giving me a cute name &#58377</p>
 				<p>thanks for everything &#128519 &#128522</p>
 				<p>pata hi nai chala ki  </p>
 				<p>Tu kab itni important ban gayi &#129300 &#128556..</p>
+				<p>aur fir kab door ho gyi...&#65039</p>
+				<p>Khair.. dur tu hui m thori &#58370</p>
+				<p>Mere liye to tu woi bhindi rahe gi...<br> cute si... pyari si.. baklol si..&#58386</p>
+				<p>Main picha nai chor rha tera betu&#128520</p>
+				<p>ganda phashi h tu...&#58386</p>
+				<p>chall aab main thori si formalities kr leta</p>
 				<p>I wish you all the best &#10084</p>
 				<p>For the rest of your life</p>
 				<p>May all your wishes come true &#129321</p>
@@ -149,7 +155,7 @@
 				<p>but don't worry </p>
 				<p>you are not alone because &#128521...</p>
 				<p>God has your back</p>
-				<p>God ka malum nai ...</p>
+				<p>God ka malum nai.. meri banti nai h..</p>
 				<p>But main idhar hai..</p>
 				<p>so jab man kare</p>
 				<p>Tu dimag kha sakti hai mera &#129327..</p>
@@ -163,11 +169,15 @@
 				<p>fill it with your most beautiful smile &#128525</p>
 				<p>and make it the best memory..</p>
 				<p>keep smiling &#128522..</p>
+				<p>sach bata rha m...</p>
+				<p>hayeeee... smile h teri&#57606&#57606<br> bilkul sukon wala &#58378&#58378</p>
+				<p>pat jaa yaar 😥😥</p>
 				<p>and lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday navooo &#129395 &#129395 &#129395</p>
+				<p>a very happy birthday bhindi &#129395 &#129395 &#129395</p>
+				<p>and sorry i cant do anything more than this..<br>gareebi aa rakhi h😢😢</p>
 				<p>chal aab party nikalll &#128523..</p>
-				<p>aree ignore kya kr rhi hai &#128530..<br>idhar dekh idhar &#128530</p>
+				<p>aree ignore kya kr rhi hai &#128530..<br>idhar dekh idhaarrrrr &#128530</p>
 				<p>partyyyyyyyyyyyyyyyyyyyyyyyyyy &#129395 &#128523 &#129395</p>
 				<p>Happy birthdayyy &#129395 &#129395</p>
 			</div>
