--- a/hbd/index.html
+++ b/hbd/index.html
@@ -126,16 +126,17 @@
 				<p>thanks for the friendship we made &#128525</p>
 				<p>Thanks for listning to my all bakwas baaten &#128517</p>
 				<p>Thanks for tollarating all my faltu pickup lines &#128518...</p>
-				<p>but fir v nai pati tuu .. &#58385 &#58385</p>
-				<p>Thanks for giving me a cute name &#58377</p>
+				<p>but fir v nai pati tuu .. &#128557&#128557</p>
+				<p>Thanks for giving me a cute name &#128539</p>
 				<p>thanks for everything &#128519 &#128522</p>
 				<p>pata hi nai chala ki  </p>
 				<p>Tu kab itni important ban gayi &#129300 &#128556..</p>
-				<p>aur fir kab door ho gyi...&#65039</p>
-				<p>Khair.. dur tu hui m thori &#58370</p>
-				<p>Mere liye to tu woi bhindi rahe gi...<br> cute si... pyari si.. baklol si..&#58386</p>
-				<p>Main picha nai chor rha tera betu&#128520</p>
-				<p>ganda phashi h tu...&#58386</p>
+				<p>aur fir kab door ho gyi...&#128532</p>
+				<p>Khair.. dur tu hui m thori &#128527</p>
+				<p>Mere liye to tu woi bhindi rahe gi...</p>
+				<p>cute si... pyari si.. baklol si..&#129315</p>
+				<p>Main picha nai chor rha tera betu&#129315</p>
+				<p>ganda phashi h tu...&#129315</p>
 				<p>chall aab main thori si formalities kr leta</p>
 				<p>I wish you all the best &#10084</p>
 				<p>For the rest of your life</p>
@@ -155,14 +156,11 @@
 				<p>but don't worry </p>
 				<p>you are not alone because &#128521...</p>
 				<p>God has your back</p>
-				<p>God ka malum nai.. meri banti nai h..</p>
+				<p>God ka malum nai.. meri banti nai h..&#128517</p>
 				<p>But main idhar hai..</p>
+				<p>tere liye Banda ek call pr hazir rahega &#128517</p>
 				<p>so jab man kare</p>
 				<p>Tu dimag kha sakti hai mera &#129327..</p>
-				<p>and I hope</p>
-				<p>this year will be better</p>
-				<p>and you'll find...</p>
-				<p>happiness along the way</p>
 				<p>keep your spirit up</p>
 				<p>enjoy every single moment...</p>
 				<p>that you experience today</p>
@@ -170,8 +168,10 @@
 				<p>and make it the best memory..</p>
 				<p>keep smiling &#128522..</p>
 				<p>sach bata rha m...</p>
-				<p>hayeeee... smile h teri&#57606&#57606<br> bilkul sukon wala &#58378&#58378</p>
-				<p>pat jaa yaar 😥😥</p>
+				<p>hayeeee... smile h teri&#128517&#128517</p>
+				<p>bilkul sukon wala &#128524&#128517</p>
+				<p>pat jaa yaar..&#128524&#128524</p>
+				<p> bygod 150 ke laddo cadhaunga bhagwan ko&#128535&#128523</p>
 				<p>and lastly...</p>
 				<p>I'd like to wish you one more time</p>
 				<p>a very happy birthday bhindi &#129395 &#129395 &#129395</p>
