--- a/hbd/index.html
+++ b/hbd/index.html
@@ -45,10 +45,10 @@
     	<h2 style="color:#D14D39;">I</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">D</h2>
+    	<h2 style="color:#8FAD00;">N</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">I</h2>
+    	<h2 style="color:#8377E4;">D</h2>
     </div>
     <div class="balloons text-center" id="b6">
     	<h2 style="color:#99C96A;">I</h2>
