--- a/hbd/index.html
+++ b/hbd/index.html
@@ -169,13 +169,14 @@
 				<p>keep smiling &#128522..</p>
 				<p>sach bata rha m...</p>
 				<p>hayeeee... smile h teri&#128517&#128517</p>
-				<p>bilkul sukon wala &#128524&#128517</p>
+				<p>bilkul sukon wala &#128524&#128519</p>
 				<p>pat jaa yaar..&#128546&#128546</p>
 				<p> bygod 150 ke laddo cadhaunga bhagwan ko&#128535&#128513</p>
 				<p>and lastly...</p>
 				<p>I'd like to wish you one more time</p>
 				<p>a very happy birthday bhindi &#129395 &#129395 &#129395</p>
-				<p>and sorry i cant do anything more than this..<br>gareebi aa rakhi h😢😢</p>
+				<p>and sorry i cant do anything more than this..</p>
+				<p>gareebi aa rakhi h😢😢</p>
 				<p>chal aab party nikalll &#128523..</p>
 				<p>aree ignore kya kr rhi hai &#128530..<br>idhar dekh idhaarrrrr &#128530</p>
 				<p>partyyyyyyyyyyyyyyyyyyyyyyyyyy &#129395 &#128523 &#129395</p>
